Disable glib event loop in klauncher, since it triggers a nasty bug.

("autostart never finishes, ksmserver ignores logout/shutdown")

BUG: 328571
FIXED-IN: 5.15